# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

component("cc") {
  sources = [
    "animation/animation.cc",
    "animation/animation.h",
    "animation/animation_curve.cc",
    "animation/animation_curve.h",
    "animation/animation_delegate.h",
    "animation/animation_events.cc",
    "animation/animation_events.h",
    "animation/animation_host.cc",
    "animation/animation_host.h",
    "animation/animation_id_provider.cc",
    "animation/animation_id_provider.h",
    "animation/animation_player.cc",
    "animation/animation_player.h",
    "animation/animation_registrar.cc",
    "animation/animation_registrar.h",
    "animation/animation_timeline.cc",
    "animation/animation_timeline.h",
    "animation/element_animations.cc",
    "animation/element_animations.h",
    "animation/keyframed_animation_curve.cc",
    "animation/keyframed_animation_curve.h",
    "animation/layer_animation_controller.cc",
    "animation/layer_animation_controller.h",
    "animation/layer_animation_event_observer.h",
    "animation/layer_animation_value_observer.h",
    "animation/layer_animation_value_provider.h",
    "animation/scroll_offset_animation_curve.cc",
    "animation/scroll_offset_animation_curve.h",
    "animation/scrollbar_animation_controller.cc",
    "animation/scrollbar_animation_controller.h",
    "animation/scrollbar_animation_controller_linear_fade.cc",
    "animation/scrollbar_animation_controller_linear_fade.h",
    "animation/scrollbar_animation_controller_thinning.cc",
    "animation/scrollbar_animation_controller_thinning.h",
    "animation/timing_function.cc",
    "animation/timing_function.h",
    "animation/transform_operation.cc",
    "animation/transform_operation.h",
    "animation/transform_operations.cc",
    "animation/transform_operations.h",
    "debug/benchmark_instrumentation.cc",
    "debug/benchmark_instrumentation.h",
    "debug/debug_colors.cc",
    "debug/debug_colors.h",
    "debug/debug_rect_history.cc",
    "debug/debug_rect_history.h",
    "debug/devtools_instrumentation.h",
    "debug/frame_rate_counter.cc",
    "debug/frame_rate_counter.h",
    "debug/frame_timing_request.cc",
    "debug/frame_timing_request.h",
    "debug/frame_timing_tracker.cc",
    "debug/frame_timing_tracker.h",
    "debug/frame_viewer_instrumentation.cc",
    "debug/frame_viewer_instrumentation.h",
    "debug/invalidation_benchmark.cc",
    "debug/invalidation_benchmark.h",
    "debug/lap_timer.cc",
    "debug/lap_timer.h",
    "debug/layer_tree_debug_state.cc",
    "debug/layer_tree_debug_state.h",
    "debug/micro_benchmark.cc",
    "debug/micro_benchmark.h",
    "debug/micro_benchmark_controller.cc",
    "debug/micro_benchmark_controller.h",
    "debug/micro_benchmark_controller_impl.cc",
    "debug/micro_benchmark_controller_impl.h",
    "debug/micro_benchmark_impl.cc",
    "debug/micro_benchmark_impl.h",
    "debug/picture_debug_util.cc",
    "debug/picture_debug_util.h",
    "debug/rasterize_and_record_benchmark.cc",
    "debug/rasterize_and_record_benchmark.h",
    "debug/rasterize_and_record_benchmark_impl.cc",
    "debug/rasterize_and_record_benchmark_impl.h",
    "debug/rendering_stats.cc",
    "debug/rendering_stats.h",
    "debug/rendering_stats_instrumentation.cc",
    "debug/rendering_stats_instrumentation.h",
    "debug/ring_buffer.h",
    "debug/traced_display_item_list.cc",
    "debug/traced_display_item_list.h",
    "debug/traced_value.cc",
    "debug/traced_value.h",
    "debug/unittest_only_benchmark.cc",
    "debug/unittest_only_benchmark.h",
    "debug/unittest_only_benchmark_impl.cc",
    "debug/unittest_only_benchmark_impl.h",
    "input/input_handler.cc",
    "input/input_handler.h",
    "input/layer_selection_bound.cc",
    "input/layer_selection_bound.h",
    "input/page_scale_animation.cc",
    "input/page_scale_animation.h",
    "input/scroll_elasticity_helper.cc",
    "input/scroll_elasticity_helper.h",
    "input/scroll_state.cc",
    "input/scroll_state.h",
    "input/selection.h",
    "input/selection_bound_type.h",
    "input/top_controls_manager.cc",
    "input/top_controls_manager.h",
    "input/top_controls_manager_client.h",
    "layers/append_quads_data.h",
    "layers/content_layer_client.h",
    "layers/delegated_frame_provider.cc",
    "layers/delegated_frame_provider.h",
    "layers/delegated_frame_resource_collection.cc",
    "layers/delegated_frame_resource_collection.h",
    "layers/delegated_renderer_layer.cc",
    "layers/delegated_renderer_layer.h",
    "layers/delegated_renderer_layer_impl.cc",
    "layers/delegated_renderer_layer_impl.h",
    "layers/draw_properties.cc",
    "layers/draw_properties.h",
    "layers/heads_up_display_layer.cc",
    "layers/heads_up_display_layer.h",
    "layers/heads_up_display_layer_impl.cc",
    "layers/heads_up_display_layer_impl.h",
    "layers/io_surface_layer.cc",
    "layers/io_surface_layer.h",
    "layers/io_surface_layer_impl.cc",
    "layers/io_surface_layer_impl.h",
    "layers/layer.cc",
    "layers/layer.h",
    "layers/layer_client.h",
    "layers/layer_impl.cc",
    "layers/layer_impl.h",
    "layers/layer_iterator.h",
    "layers/layer_lists.h",
    "layers/layer_position_constraint.cc",
    "layers/layer_position_constraint.h",
    "layers/layer_utils.cc",
    "layers/layer_utils.h",
    "layers/nine_patch_layer.cc",
    "layers/nine_patch_layer.h",
    "layers/nine_patch_layer_impl.cc",
    "layers/nine_patch_layer_impl.h",
    "layers/paint_properties.h",
    "layers/painted_scrollbar_layer.cc",
    "layers/painted_scrollbar_layer.h",
    "layers/painted_scrollbar_layer_impl.cc",
    "layers/painted_scrollbar_layer_impl.h",
    "layers/picture_image_layer.cc",
    "layers/picture_image_layer.h",
    "layers/picture_image_layer_impl.cc",
    "layers/picture_image_layer_impl.h",
    "layers/picture_layer.cc",
    "layers/picture_layer.h",
    "layers/picture_layer_impl.cc",
    "layers/picture_layer_impl.h",
    "layers/render_pass_sink.h",
    "layers/render_surface_draw_properties.cc",
    "layers/render_surface_draw_properties.h",
    "layers/render_surface_impl.cc",
    "layers/render_surface_impl.h",
    "layers/scrollbar_layer_impl_base.cc",
    "layers/scrollbar_layer_impl_base.h",
    "layers/scrollbar_layer_interface.h",
    "layers/solid_color_layer.cc",
    "layers/solid_color_layer.h",
    "layers/solid_color_layer_impl.cc",
    "layers/solid_color_layer_impl.h",
    "layers/solid_color_scrollbar_layer.cc",
    "layers/solid_color_scrollbar_layer.h",
    "layers/solid_color_scrollbar_layer_impl.cc",
    "layers/solid_color_scrollbar_layer_impl.h",
    "layers/surface_layer.cc",
    "layers/surface_layer.h",
    "layers/surface_layer_impl.cc",
    "layers/surface_layer_impl.h",
    "layers/texture_layer.cc",
    "layers/texture_layer.h",
    "layers/texture_layer_client.h",
    "layers/texture_layer_impl.cc",
    "layers/texture_layer_impl.h",
    "layers/ui_resource_layer.cc",
    "layers/ui_resource_layer.h",
    "layers/ui_resource_layer_impl.cc",
    "layers/ui_resource_layer_impl.h",
    "layers/video_frame_provider.h",
    "layers/video_frame_provider_client_impl.cc",
    "layers/video_frame_provider_client_impl.h",
    "layers/video_layer.cc",
    "layers/video_layer.h",
    "layers/video_layer_impl.cc",
    "layers/video_layer_impl.h",
    "layers/viewport.cc",
    "layers/viewport.h",
    "output/begin_frame_args.cc",
    "output/begin_frame_args.h",
    "output/bsp_tree.cc",
    "output/bsp_tree.h",
    "output/bsp_walk_action.cc",
    "output/bsp_walk_action.h",
    "output/compositor_frame.cc",
    "output/compositor_frame.h",
    "output/compositor_frame_ack.cc",
    "output/compositor_frame_ack.h",
    "output/compositor_frame_metadata.cc",
    "output/compositor_frame_metadata.h",
    "output/context_provider.cc",
    "output/context_provider.h",
    "output/copy_output_request.cc",
    "output/copy_output_request.h",
    "output/copy_output_result.cc",
    "output/copy_output_result.h",
    "output/delegated_frame_data.cc",
    "output/delegated_frame_data.h",
    "output/delegating_renderer.cc",
    "output/delegating_renderer.h",
    "output/direct_renderer.cc",
    "output/direct_renderer.h",
    "output/dynamic_geometry_binding.cc",
    "output/dynamic_geometry_binding.h",
    "output/filter_operation.cc",
    "output/filter_operation.h",
    "output/filter_operations.cc",
    "output/filter_operations.h",
    "output/geometry_binding.cc",
    "output/geometry_binding.h",
    "output/gl_frame_data.cc",
    "output/gl_frame_data.h",
    "output/gl_renderer.cc",
    "output/gl_renderer.h",
    "output/gl_renderer_draw_cache.cc",
    "output/gl_renderer_draw_cache.h",
    "output/latency_info_swap_promise.cc",
    "output/latency_info_swap_promise.h",
    "output/layer_quad.cc",
    "output/layer_quad.h",
    "output/managed_memory_policy.cc",
    "output/managed_memory_policy.h",
    "output/output_surface.cc",
    "output/output_surface.h",
    "output/output_surface_client.h",
    "output/overlay_candidate.cc",
    "output/overlay_candidate.h",
    "output/overlay_candidate_validator.h",
    "output/overlay_processor.cc",
    "output/overlay_processor.h",
    "output/overlay_strategy_all_or_nothing.cc",
    "output/overlay_strategy_all_or_nothing.h",
    "output/overlay_strategy_common.cc",
    "output/overlay_strategy_common.h",
    "output/overlay_strategy_sandwich.cc",
    "output/overlay_strategy_sandwich.h",
    "output/overlay_strategy_single_on_top.cc",
    "output/overlay_strategy_single_on_top.h",
    "output/overlay_strategy_underlay.cc",
    "output/overlay_strategy_underlay.h",
    "output/program_binding.cc",
    "output/program_binding.h",
    "output/render_surface_filters.cc",
    "output/render_surface_filters.h",
    "output/renderer.cc",
    "output/renderer.h",
    "output/renderer_capabilities.cc",
    "output/renderer_capabilities.h",
    "output/renderer_settings.cc",
    "output/renderer_settings.h",
    "output/shader.cc",
    "output/shader.h",
    "output/software_output_device.cc",
    "output/software_output_device.h",
    "output/software_renderer.cc",
    "output/software_renderer.h",
    "output/static_geometry_binding.cc",
    "output/static_geometry_binding.h",
    "output/swap_promise.h",
    "output/texture_mailbox_deleter.cc",
    "output/texture_mailbox_deleter.h",
    "output/viewport_selection_bound.cc",
    "output/viewport_selection_bound.h",
    "playback/clip_display_item.cc",
    "playback/clip_display_item.h",
    "playback/clip_path_display_item.cc",
    "playback/clip_path_display_item.h",
    "playback/compositing_display_item.cc",
    "playback/compositing_display_item.h",
    "playback/discardable_image_map.cc",
    "playback/discardable_image_map.h",
    "playback/display_item.cc",
    "playback/display_item.h",
    "playback/display_item_list.cc",
    "playback/display_item_list.h",
    "playback/display_item_list_bounds_calculator.cc",
    "playback/display_item_list_bounds_calculator.h",
    "playback/display_item_list_settings.cc",
    "playback/display_item_list_settings.h",
    "playback/display_list_raster_source.cc",
    "playback/display_list_raster_source.h",
    "playback/display_list_recording_source.cc",
    "playback/display_list_recording_source.h",
    "playback/drawing_display_item.cc",
    "playback/drawing_display_item.h",
    "playback/filter_display_item.cc",
    "playback/filter_display_item.h",
    "playback/float_clip_display_item.cc",
    "playback/float_clip_display_item.h",
    "playback/largest_display_item.cc",
    "playback/largest_display_item.h",
    "playback/position_image.h",
    "playback/raster_source.h",
    "playback/raster_source_helper.cc",
    "playback/raster_source_helper.h",
    "playback/transform_display_item.cc",
    "playback/transform_display_item.h",
    "quads/content_draw_quad_base.cc",
    "quads/content_draw_quad_base.h",
    "quads/debug_border_draw_quad.cc",
    "quads/debug_border_draw_quad.h",
    "quads/draw_polygon.cc",
    "quads/draw_polygon.h",
    "quads/draw_quad.cc",
    "quads/draw_quad.h",
    "quads/io_surface_draw_quad.cc",
    "quads/io_surface_draw_quad.h",
    "quads/largest_draw_quad.cc",
    "quads/largest_draw_quad.h",
    "quads/picture_draw_quad.cc",
    "quads/picture_draw_quad.h",
    "quads/render_pass.cc",
    "quads/render_pass.h",
    "quads/render_pass_draw_quad.cc",
    "quads/render_pass_draw_quad.h",
    "quads/render_pass_id.cc",
    "quads/render_pass_id.h",
    "quads/shared_quad_state.cc",
    "quads/shared_quad_state.h",
    "quads/solid_color_draw_quad.cc",
    "quads/solid_color_draw_quad.h",
    "quads/stream_video_draw_quad.cc",
    "quads/stream_video_draw_quad.h",
    "quads/surface_draw_quad.cc",
    "quads/surface_draw_quad.h",
    "quads/texture_draw_quad.cc",
    "quads/texture_draw_quad.h",
    "quads/tile_draw_quad.cc",
    "quads/tile_draw_quad.h",
    "quads/yuv_video_draw_quad.cc",
    "quads/yuv_video_draw_quad.h",
    "raster/bitmap_tile_task_worker_pool.cc",
    "raster/bitmap_tile_task_worker_pool.h",
    "raster/gpu_rasterizer.cc",
    "raster/gpu_rasterizer.h",
    "raster/gpu_tile_task_worker_pool.cc",
    "raster/gpu_tile_task_worker_pool.h",
    "raster/one_copy_tile_task_worker_pool.cc",
    "raster/one_copy_tile_task_worker_pool.h",
    "raster/raster_buffer.cc",
    "raster/raster_buffer.h",
    "raster/scoped_gpu_raster.cc",
    "raster/scoped_gpu_raster.h",
    "raster/task_graph_runner.cc",
    "raster/task_graph_runner.h",
    "raster/texture_compressor.cc",
    "raster/texture_compressor.h",
    "raster/texture_compressor_etc1.cc",
    "raster/texture_compressor_etc1.h",
    "raster/tile_task_runner.cc",
    "raster/tile_task_runner.h",
    "raster/tile_task_worker_pool.cc",
    "raster/tile_task_worker_pool.h",
    "raster/zero_copy_tile_task_worker_pool.cc",
    "raster/zero_copy_tile_task_worker_pool.h",
    "resources/memory_history.cc",
    "resources/memory_history.h",
    "resources/platform_color.h",
    "resources/release_callback.h",
    "resources/resource.h",
    "resources/resource_format.cc",
    "resources/resource_format.h",
    "resources/resource_pool.cc",
    "resources/resource_pool.h",
    "resources/resource_provider.cc",
    "resources/resource_provider.h",
    "resources/resource_util.h",
    "resources/returned_resource.h",
    "resources/scoped_resource.cc",
    "resources/scoped_resource.h",
    "resources/scoped_ui_resource.cc",
    "resources/scoped_ui_resource.h",
    "resources/shared_bitmap.cc",
    "resources/shared_bitmap.h",
    "resources/shared_bitmap_manager.h",
    "resources/single_release_callback.cc",
    "resources/single_release_callback.h",
    "resources/single_release_callback_impl.cc",
    "resources/single_release_callback_impl.h",
    "resources/texture_mailbox.cc",
    "resources/texture_mailbox.h",
    "resources/transferable_resource.cc",
    "resources/transferable_resource.h",
    "resources/ui_resource_bitmap.cc",
    "resources/ui_resource_bitmap.h",
    "resources/ui_resource_client.h",
    "resources/ui_resource_request.cc",
    "resources/ui_resource_request.h",
    "resources/video_resource_updater.cc",
    "resources/video_resource_updater.h",
    "scheduler/begin_frame_source.cc",
    "scheduler/begin_frame_source.h",
    "scheduler/begin_frame_tracker.cc",
    "scheduler/begin_frame_tracker.h",
    "scheduler/commit_earlyout_reason.h",
    "scheduler/compositor_timing_history.cc",
    "scheduler/compositor_timing_history.h",
    "scheduler/delay_based_time_source.cc",
    "scheduler/delay_based_time_source.h",
    "scheduler/draw_result.h",
    "scheduler/scheduler.cc",
    "scheduler/scheduler.h",
    "scheduler/scheduler_settings.cc",
    "scheduler/scheduler_settings.h",
    "scheduler/scheduler_state_machine.cc",
    "scheduler/scheduler_state_machine.h",
    "scheduler/video_frame_controller.h",
    "tiles/eviction_tile_priority_queue.cc",
    "tiles/eviction_tile_priority_queue.h",
    "tiles/image_decode_controller.cc",
    "tiles/image_decode_controller.h",
    "tiles/picture_layer_tiling.cc",
    "tiles/picture_layer_tiling.h",
    "tiles/picture_layer_tiling_set.cc",
    "tiles/picture_layer_tiling_set.h",
    "tiles/prioritized_tile.cc",
    "tiles/prioritized_tile.h",
    "tiles/raster_tile_priority_queue.cc",
    "tiles/raster_tile_priority_queue.h",
    "tiles/raster_tile_priority_queue_all.cc",
    "tiles/raster_tile_priority_queue_all.h",
    "tiles/raster_tile_priority_queue_required.cc",
    "tiles/raster_tile_priority_queue_required.h",
    "tiles/tile.cc",
    "tiles/tile.h",
    "tiles/tile_draw_info.cc",
    "tiles/tile_draw_info.h",
    "tiles/tile_manager.cc",
    "tiles/tile_manager.h",
    "tiles/tile_priority.cc",
    "tiles/tile_priority.h",
    "tiles/tiling_set_eviction_queue.cc",
    "tiles/tiling_set_eviction_queue.h",
    "tiles/tiling_set_raster_queue_all.cc",
    "tiles/tiling_set_raster_queue_all.h",
    "tiles/tiling_set_raster_queue_required.cc",
    "tiles/tiling_set_raster_queue_required.h",
    "trees/blocking_task_runner.cc",
    "trees/blocking_task_runner.h",
    "trees/channel_impl.h",
    "trees/channel_main.h",
    "trees/damage_tracker.cc",
    "trees/damage_tracker.h",
    "trees/draw_property_utils.cc",
    "trees/draw_property_utils.h",
    "trees/latency_info_swap_promise_monitor.cc",
    "trees/latency_info_swap_promise_monitor.h",
    "trees/layer_tree_host.cc",
    "trees/layer_tree_host.h",
    "trees/layer_tree_host_client.h",
    "trees/layer_tree_host_common.cc",
    "trees/layer_tree_host_common.h",
    "trees/layer_tree_host_impl.cc",
    "trees/layer_tree_host_impl.h",
    "trees/layer_tree_host_single_thread_client.h",
    "trees/layer_tree_impl.cc",
    "trees/layer_tree_impl.h",
    "trees/layer_tree_settings.cc",
    "trees/layer_tree_settings.h",
    "trees/mutator_host_client.h",
    "trees/occlusion.cc",
    "trees/occlusion.h",
    "trees/occlusion_tracker.cc",
    "trees/occlusion_tracker.h",
    "trees/property_tree.cc",
    "trees/property_tree.h",
    "trees/property_tree_builder.cc",
    "trees/property_tree_builder.h",
    "trees/proxy.cc",
    "trees/proxy.h",
    "trees/proxy_impl.h",
    "trees/proxy_main.h",
    "trees/scoped_abort_remaining_swap_promises.h",
    "trees/single_thread_proxy.cc",
    "trees/single_thread_proxy.h",
    "trees/swap_promise_monitor.cc",
    "trees/swap_promise_monitor.h",
    "trees/thread_proxy.cc",
    "trees/thread_proxy.h",
    "trees/threaded_channel.cc",
    "trees/threaded_channel.h",
    "trees/tree_synchronizer.cc",
    "trees/tree_synchronizer.h",
  ]

  if (target_cpu == "x86" || target_cpu == "x64") {
    sources += [
      "raster/texture_compressor_etc1_sse.cc",
      "raster/texture_compressor_etc1_sse.h",
    ]
  }

  configs += [ "//build/config:precompiled_headers" ]

  public_deps = [
    "//cc/base",
    "//skia",
  ]
  deps = [
    "//base",
    "//base/third_party/dynamic_annotations",
    "//cc/surfaces:surface_id",
    "//gpu",
    "//gpu/command_buffer/client:gles2_interface",
    "//media",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
  ]

  defines = [ "CC_IMPLEMENTATION=1" ]

  if (!is_debug && (is_win || is_android)) {
    configs -= [ "//build/config/compiler:default_optimization" ]
    configs += [ "//build/config/compiler:optimize_max" ]
  }
}

source_set("test_support") {
  testonly = true
  sources = [
    "test/animation_test_common.cc",
    "test/animation_test_common.h",
    "test/animation_timelines_test_common.cc",
    "test/animation_timelines_test_common.h",
    "test/begin_frame_args_test.cc",
    "test/begin_frame_args_test.h",
    "test/failure_output_surface.cc",
    "test/failure_output_surface.h",
    "test/fake_content_layer_client.cc",
    "test/fake_content_layer_client.h",
    "test/fake_delegated_renderer_layer.cc",
    "test/fake_delegated_renderer_layer.h",
    "test/fake_delegated_renderer_layer_impl.cc",
    "test/fake_delegated_renderer_layer_impl.h",
    "test/fake_display_list_raster_source.cc",
    "test/fake_display_list_raster_source.h",
    "test/fake_display_list_recording_source.cc",
    "test/fake_display_list_recording_source.h",
    "test/fake_external_begin_frame_source.cc",
    "test/fake_external_begin_frame_source.h",
    "test/fake_impl_proxy.h",
    "test/fake_layer_tree_host.cc",
    "test/fake_layer_tree_host.h",
    "test/fake_layer_tree_host_client.cc",
    "test/fake_layer_tree_host_client.h",
    "test/fake_layer_tree_host_impl.cc",
    "test/fake_layer_tree_host_impl.h",
    "test/fake_layer_tree_host_impl_client.cc",
    "test/fake_layer_tree_host_impl_client.h",
    "test/fake_output_surface.cc",
    "test/fake_output_surface.h",
    "test/fake_output_surface_client.cc",
    "test/fake_output_surface_client.h",
    "test/fake_painted_scrollbar_layer.cc",
    "test/fake_painted_scrollbar_layer.h",
    "test/fake_picture_layer.cc",
    "test/fake_picture_layer.h",
    "test/fake_picture_layer_impl.cc",
    "test/fake_picture_layer_impl.h",
    "test/fake_picture_layer_tiling_client.cc",
    "test/fake_picture_layer_tiling_client.h",
    "test/fake_proxy.cc",
    "test/fake_proxy.h",
    "test/fake_renderer_client.cc",
    "test/fake_renderer_client.h",
    "test/fake_rendering_stats_instrumentation.h",
    "test/fake_resource_provider.h",
    "test/fake_scoped_ui_resource.cc",
    "test/fake_scoped_ui_resource.h",
    "test/fake_scrollbar.cc",
    "test/fake_scrollbar.h",
    "test/fake_tile_manager.cc",
    "test/fake_tile_manager.h",
    "test/fake_tile_manager_client.cc",
    "test/fake_tile_manager_client.h",
    "test/fake_ui_resource_layer_tree_host_impl.cc",
    "test/fake_ui_resource_layer_tree_host_impl.h",
    "test/fake_video_frame_provider.cc",
    "test/fake_video_frame_provider.h",
    "test/geometry_test_utils.cc",
    "test/geometry_test_utils.h",
    "test/layer_test_common.cc",
    "test/layer_test_common.h",
    "test/layer_tree_host_common_test.cc",
    "test/layer_tree_host_common_test.h",
    "test/layer_tree_json_parser.cc",
    "test/layer_tree_json_parser.h",
    "test/layer_tree_pixel_resource_test.cc",
    "test/layer_tree_pixel_resource_test.h",
    "test/layer_tree_pixel_test.cc",
    "test/layer_tree_pixel_test.h",
    "test/layer_tree_test.cc",
    "test/layer_tree_test.h",
    "test/mock_occlusion_tracker.h",
    "test/ordered_simple_task_runner.cc",
    "test/ordered_simple_task_runner.h",
    "test/ordered_texture_map.cc",
    "test/ordered_texture_map.h",
    "test/paths.cc",
    "test/paths.h",
    "test/pixel_comparator.cc",
    "test/pixel_comparator.h",
    "test/pixel_test.cc",
    "test/pixel_test.h",
    "test/pixel_test_output_surface.cc",
    "test/pixel_test_output_surface.h",
    "test/pixel_test_software_output_device.cc",
    "test/pixel_test_software_output_device.h",
    "test/pixel_test_utils.cc",
    "test/pixel_test_utils.h",
    "test/render_pass_test_utils.cc",
    "test/render_pass_test_utils.h",
    "test/scheduler_test_common.cc",
    "test/scheduler_test_common.h",
    "test/skia_common.cc",
    "test/skia_common.h",
    "test/solid_color_content_layer_client.cc",
    "test/solid_color_content_layer_client.h",
    "test/test_context_provider.cc",
    "test/test_context_provider.h",
    "test/test_context_support.cc",
    "test/test_context_support.h",
    "test/test_gles2_interface.cc",
    "test/test_gles2_interface.h",
    "test/test_gpu_memory_buffer_manager.cc",
    "test/test_gpu_memory_buffer_manager.h",
    "test/test_image_factory.cc",
    "test/test_image_factory.h",
    "test/test_in_process_context_provider.cc",
    "test/test_in_process_context_provider.h",
    "test/test_occlusion_tracker.h",
    "test/test_shared_bitmap_manager.cc",
    "test/test_shared_bitmap_manager.h",
    "test/test_task_graph_runner.cc",
    "test/test_task_graph_runner.h",
    "test/test_texture.cc",
    "test/test_texture.h",
    "test/test_tile_priorities.cc",
    "test/test_tile_priorities.h",
    "test/test_web_graphics_context_3d.cc",
    "test/test_web_graphics_context_3d.h",
  ]

  configs += [ "//build/config:precompiled_headers" ]
  include_dirs = [
    ".",
    "test",
  ]

  public_deps = [
    ":cc",
    "//gpu:test_support",
  ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//base/third_party/dynamic_annotations",
    "//gpu/command_buffer/client:gles2_c_lib",
    "//gpu/command_buffer/client:gles2_implementation",
    "//gpu/command_buffer/client:gl_in_process_context",
    "//gpu/command_buffer/common:gles2_utils",
    "//gpu/skia_bindings",
    "//media",
    "//skia",
    "//testing/gmock",
    "//testing/gtest",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gfx:test_support",
    "//ui/gl",
    "//ui/gl:test_support",
  ]

  if (!is_android) {  # TODO(GYP) Enable on Android when osmesa links.
    deps += [ "//third_party/mesa:osmesa" ]
  }
}

# TODO(GYP): Delete this after we've converted everything to GN.
# The _run targets exist only for compatibility w/ GYP.
group("cc_unittests_run") {
  testonly = true
  deps = [
    ":cc_unittests",
  ]
}

test("cc_unittests") {
  sources = [
    "animation/animation_host_unittest.cc",
    "animation/animation_player_unittest.cc",
    "animation/animation_timeline_unittest.cc",
    "animation/animation_unittest.cc",
    "animation/element_animations_unittest.cc",
    "animation/keyframed_animation_curve_unittest.cc",
    "animation/layer_animation_controller_unittest.cc",
    "animation/scroll_offset_animation_curve_unittest.cc",
    "animation/scrollbar_animation_controller_linear_fade_unittest.cc",
    "animation/scrollbar_animation_controller_thinning_unittest.cc",
    "animation/transform_operations_unittest.cc",
    "base/delayed_unique_notifier_unittest.cc",
    "base/float_quad_unittest.cc",
    "base/histograms_unittest.cc",
    "base/list_container_unittest.cc",
    "base/math_util_unittest.cc",
    "base/random_access_list_container_unittest.cc",
    "base/region_unittest.cc",
    "base/rolling_time_delta_history_unittest.cc",
    "base/rtree_unittest.cc",
    "base/scoped_ptr_vector_unittest.cc",
    "base/simple_enclosed_region_unittest.cc",
    "base/tiling_data_unittest.cc",
    "base/unique_notifier_unittest.cc",
    "debug/frame_timing_tracker_unittest.cc",
    "debug/micro_benchmark_controller_unittest.cc",
    "debug/rendering_stats_unittest.cc",
    "input/scroll_state_unittest.cc",
    "input/top_controls_manager_unittest.cc",
    "layers/delegated_frame_provider_unittest.cc",
    "layers/delegated_frame_resource_collection_unittest.cc",
    "layers/delegated_renderer_layer_impl_unittest.cc",
    "layers/delegated_renderer_layer_unittest.cc",
    "layers/heads_up_display_layer_impl_unittest.cc",
    "layers/heads_up_display_unittest.cc",
    "layers/io_surface_layer_impl_unittest.cc",
    "layers/layer_impl_unittest.cc",
    "layers/layer_iterator_unittest.cc",
    "layers/layer_position_constraint_unittest.cc",
    "layers/layer_unittest.cc",
    "layers/layer_utils_unittest.cc",
    "layers/nine_patch_layer_impl_unittest.cc",
    "layers/nine_patch_layer_unittest.cc",
    "layers/painted_scrollbar_layer_impl_unittest.cc",
    "layers/picture_image_layer_impl_unittest.cc",
    "layers/picture_image_layer_unittest.cc",
    "layers/picture_layer_impl_unittest.cc",
    "layers/picture_layer_unittest.cc",
    "layers/render_surface_impl_unittest.cc",
    "layers/render_surface_unittest.cc",
    "layers/scrollbar_layer_unittest.cc",
    "layers/solid_color_layer_impl_unittest.cc",
    "layers/solid_color_scrollbar_layer_impl_unittest.cc",
    "layers/surface_layer_impl_unittest.cc",
    "layers/surface_layer_unittest.cc",
    "layers/texture_layer_impl_unittest.cc",
    "layers/texture_layer_unittest.cc",
    "layers/ui_resource_layer_impl_unittest.cc",
    "layers/ui_resource_layer_unittest.cc",
    "layers/video_frame_provider_client_impl_unittest.cc",
    "layers/video_layer_impl_unittest.cc",
    "output/begin_frame_args_unittest.cc",
    "output/bsp_tree_unittest.cc",
    "output/delegating_renderer_unittest.cc",
    "output/filter_operations_unittest.cc",
    "output/gl_renderer_unittest.cc",
    "output/layer_quad_unittest.cc",
    "output/output_surface_unittest.cc",
    "output/overlay_unittest.cc",
    "output/renderer_pixeltest.cc",
    "output/renderer_unittest.cc",
    "output/shader_unittest.cc",
    "output/software_renderer_unittest.cc",
    "output/texture_mailbox_deleter_unittest.cc",
    "playback/discardable_image_map_unittest.cc",
    "playback/display_item_list_unittest.cc",
    "playback/display_list_raster_source_unittest.cc",
    "playback/display_list_recording_source_unittest.cc",
    "quads/draw_polygon_unittest.cc",
    "quads/draw_quad_unittest.cc",
    "quads/render_pass_unittest.cc",
    "raster/scoped_gpu_raster_unittest.cc",
    "raster/task_graph_runner_unittest.cc",
    "raster/texture_compressor_etc1_unittest.cc",
    "raster/tile_task_worker_pool_unittest.cc",
    "resources/platform_color_unittest.cc",
    "resources/resource_pool_unittest.cc",
    "resources/resource_provider_unittest.cc",
    "resources/resource_util_unittest.cc",
    "resources/scoped_resource_unittest.cc",
    "resources/video_resource_updater_unittest.cc",
    "scheduler/begin_frame_source_unittest.cc",
    "scheduler/compositor_timing_history_unittest.cc",
    "scheduler/delay_based_time_source_unittest.cc",
    "scheduler/scheduler_state_machine_unittest.cc",
    "scheduler/scheduler_unittest.cc",
    "test/layer_tree_json_parser_unittest.cc",
    "test/ordered_simple_task_runner_unittest.cc",
    "test/test_web_graphics_context_3d_unittest.cc",
    "tiles/picture_layer_tiling_set_unittest.cc",
    "tiles/picture_layer_tiling_unittest.cc",
    "tiles/tile_manager_unittest.cc",
    "tiles/tile_priority_unittest.cc",
    "trees/blocking_task_runner_unittest.cc",
    "trees/damage_tracker_unittest.cc",
    "trees/layer_tree_host_common_unittest.cc",
    "trees/layer_tree_host_impl_unittest.cc",
    "trees/layer_tree_host_pixeltest_blending.cc",
    "trees/layer_tree_host_pixeltest_filters.cc",
    "trees/layer_tree_host_pixeltest_masks.cc",
    "trees/layer_tree_host_pixeltest_readback.cc",
    "trees/layer_tree_host_pixeltest_synchronous.cc",
    "trees/layer_tree_host_pixeltest_tiles.cc",
    "trees/layer_tree_host_unittest.cc",
    "trees/layer_tree_host_unittest_animation.cc",
    "trees/layer_tree_host_unittest_animation_timelines.cc",
    "trees/layer_tree_host_unittest_context.cc",
    "trees/layer_tree_host_unittest_copyrequest.cc",
    "trees/layer_tree_host_unittest_damage.cc",
    "trees/layer_tree_host_unittest_delegated.cc",
    "trees/layer_tree_host_unittest_occlusion.cc",
    "trees/layer_tree_host_unittest_picture.cc",
    "trees/layer_tree_host_unittest_proxy.cc",
    "trees/layer_tree_host_unittest_scroll.cc",
    "trees/layer_tree_host_unittest_video.cc",
    "trees/layer_tree_impl_unittest.cc",
    "trees/occlusion_tracker_unittest.cc",
    "trees/occlusion_unittest.cc",
    "trees/property_tree_unittest.cc",
    "trees/tree_synchronizer_unittest.cc",

    # Surfaces test files.
    "surfaces/display_scheduler_unittest.cc",
    "surfaces/display_unittest.cc",
    "surfaces/surface_aggregator_test_helpers.cc",
    "surfaces/surface_aggregator_test_helpers.h",
    "surfaces/surface_aggregator_unittest.cc",
    "surfaces/surface_display_output_surface_unittest.cc",
    "surfaces/surface_factory_unittest.cc",
    "surfaces/surface_hittest_unittest.cc",
    "surfaces/surface_unittest.cc",
    "surfaces/surfaces_pixeltest.cc",

    # Setup.
    "test/cc_test_suite.cc",
    "test/run_all_unittests.cc",
  ]

  configs += [ "//build/config:precompiled_headers" ]
  data = [
    "test/data/",
  ]

  deps = [
    ":cc",
    ":test_support",
    "//base/test:test_support",
    "//cc/surfaces",
    "//cc/surfaces:surface_id",
    "//gpu",
    "//gpu:test_support",
    "//gpu/command_buffer/client:gles2_interface",
    "//gpu/command_buffer/common:gles2_utils",
    "//media",
    "//testing/gmock",
    "//testing/gtest",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gfx:test_support",
    "//ui/gl",
    "//ui/gl:test_support",
  ]

  data_deps = [ "//third_party/mesa:osmesa" ]
}

test("cc_perftests") {
  sources = [
    "layers/layer_perftest.cc",
    "layers/picture_layer_impl_perftest.cc",
    "quads/draw_quad_perftest.cc",
    "raster/task_graph_runner_perftest.cc",
    "raster/texture_compressor_perftest.cc",
    "raster/tile_task_worker_pool_perftest.cc",
    "surfaces/surface_aggregator_perftest.cc",
    "test/cc_test_suite.cc",
    "test/run_all_perftests.cc",
    "tiles/picture_layer_tiling_perftest.cc",
    "tiles/tile_manager_perftest.cc",
    "trees/layer_tree_host_common_perftest.cc",
    "trees/layer_tree_host_perftest.cc",
    "trees/occlusion_tracker_perftest.cc",
  ]

  deps = [
    ":cc",
    ":test_support",
    "//base",
    "//base/test:test_support",
    "//cc/surfaces",
    "//cc/surfaces:surface_id",
    "//gpu",
    "//gpu:test_support",
    "//gpu/command_buffer/common:gles2_utils",
    "//media",
    "//skia",
    "//testing/gmock",
    "//testing/gtest",
    "//testing/perf",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl:test_support",
  ]

  if (is_android) {
    isolate_file = "cc_perftests.isolate"
  }
}
# When adding support for isolates, please have a look at run-time dependencies
# in the cc_unittests_run target in cc_tests.gyp.
